Fri Jun 10 00:25:03 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* gc.c: remove an unused declaration.

Fri Jun 10 00:24:04 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (string_to_r): Rational#** may return flonum.

Thu Jun  9 23:57:53 2011  Tanaka Akira  <akr@fsij.org>

	* io.c: fix IO.copy_stream interrupt handling.
	  based on the patch by Eric Wong.  [ruby-core:36156]

	* vm_core.h (rb_thread_call_with_gvl): don't declare here.

	* thread.c: include internal.h.
	  (rb_thread_execute_interrupts): new function.

	* internal.h (rb_thread_execute_interrupts): declared.
	  (rb_thread_call_with_gvl): declared.

Thu Jun  9 23:34:01 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* gc.c (rb_objspace_call_finalizer): use rb_typeddata_is_kind_of() for
	  type check to get rid of a double free when main Thread has singleton
	  class. [ruby-core:36741] [Bug #4828]
	* thread.c (rb_obj_is_mutex): add a new utility function.
	* vm.c (rb_obj_is_thread): ditto.

Thu Jun  9 22:53:49 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/ruby/test_thread.rb (TestThread#test_kill_thread_subclass):
	  add test for Thread.kill with Thread subclass instance.

Thu Jun  9 22:31:47 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/ruby/test_thread.rb (TestThread#test_kill_wrong_argument):
	  test for [ruby-core:35086].
	  partially forward porting r31402 from ruby_1_9_2 branch.

Thu Jun  9 18:36:00 2011  Kenta Murata <mrkn@mrkn.jp>

	* string.c: Fix the ambiguous description of the behavior of
	  rb_str_aref_m with a range.  It returns nil when the beginning of
	  the range is greater than the end of the string rather than the range.

Thu Jun  9 10:57:03 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: Hash subclasses can be read
	  from YAML files.
	* ext/psych/lib/psych/visitors/yaml_tree.rb: Hash subclasses can be
	  dumped to YAML files.
	* test/psych/test_hash.rb: corresponding test.
